# bs-translator-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  a.json  docker-compose.yml  pyproject.toml  pyrefly.toml  pyrightconfig.json  renovate.json  run.sh
.cursor/rules/: fastapi-rules.mdc  python.mdc
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml  main.yml
examples/: image_overlay_demo.py
src/bs_translator_backend/: _version.py  app.py  container.py
src/bs_translator_backend/agents/: translation_agent.py
src/bs_translator_backend/models/: __init__.py  app_config.py  conversion_result.py  docling_response.py  error_codes.py  error_response.py  language.py  langugage.py  translation.py  translation_config.py  translation_input.py
src/bs_translator_backend/routers/: convert_route.py  transcription_route.py  translation_route.py
src/bs_translator_backend/scripts/: optimize_llm.py  prepare_dataset.py
src/bs_translator_backend/services/: document_conversion_service.py  image_reader_serivice.py  llm_facade.py  text_chunk_service.py  transcription_service.py  translation_service.py  usage_tracking_service.py
src/bs_translator_backend/services/custom_llms/: qwen3.py
src/bs_translator_backend/services/dspy_config/: dataset_loader.py  translation_module.pkl  translation_program.py
src/bs_translator_backend/stubs/version_pioneer/: api.pyi
src/bs_translator_backend/translator/: __init__.py  base_translator.py  docx_translator.py  pdf_translator.py  text_translator.py  utils.py
src/bs_translator_backend/utils/: app_config.py  cancelation.py  image_overlay.py  language_detection.py  load_env.py  logger.py
tests/: test_foo.py  test_text_chunk_service.py
tests/integration/: document_convertion_service_test.py  translation_service_test.py  translation_service_with_overlay_test.py
tests/unit/: test_language.py  test_language_detection.py  test_swiss_german_stream_listener.py  test_translation_agent.py
